--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8081
+spring.h2.console.enabled=true
+spring.h2.console.path=/bd
+spring.datasource.url=jdbc:h2:mem:db
+spring.jpa.show-sql=true
