--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,15 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>7.15.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.modelmapper</groupId>
