--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,26 @@
 server.port=8081
+
+
+# ===============================
+# = JPA / H2
+# ===============================
 spring.h2.console.enabled=true
 spring.h2.console.path=/bd
 spring.datasource.url=jdbc:h2:mem:db
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+logging.level.org.hibernate.stat=debug
 spring.jpa.generate-ddl=false
+logging.level.org.hibernate.type=trace
 
+
+# ===============================
+# = URL
+# ===============================
 application.weatherUrl=https://api.openweathermap.org/data/2.5/weather?q={city}&appid=9d596f101f3fe0853018008fb6aff342&units=metric
+
+
+# ===============================
+# = Logging
+# ===============================
+logging.file.name=log.txt
