rename pointcuts method.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.h2.console.path=/bd
 spring.datasource.url=jdbc:h2:mem:db
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
-logging.level.org.hibernate.stat=debug
+#logging.level.org.hibernate.stat=debug
 spring.jpa.generate-ddl=false
-logging.level.org.hibernate.type=trace
+#logging.level.org.hibernate.type=trace
 
 
 # ===============================
